2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* Makefile.am:
	* NEWS:
	* configure.ac:
	* icon-themes/Foxtrot/Makefile.am:
	* icon-themes/Gion/Makefile.am:
	* icon-themes/Neu/Makefile.am:
	Updated Makefile.am to fix make distcheck

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* AUTHORS:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* configure.in:
	* desktop-themes/Darklooks/Makefile.am:
	* desktop-themes/Darklooks/index.theme.in:
	* desktop-themes/Makefile.am:
	* gnome-themes-extras.spec.in:
	* gtk-themes/Darklooks/Makefile.am:
	* gtk-themes/Darklooks/gtk-2.0/Makefile.am:
	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	* gtk-themes/Makefile.am:
	Added Darklooks gtk theme
	Moved to configure.ac

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* icon-themes/Foxtrot/AUTHORS:
	Added AUTHORS file to Foxtrot

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* AUTHORS:
	* NEWS:
	* configure.in:
	* icon-themes/Foxtrot/16x16/Makefile.am:
	* icon-themes/Foxtrot/22x22/Makefile.am:
	* icon-themes/Foxtrot/24x24/Makefile.am:
	* icon-themes/Foxtrot/Makefile.am:
	* icon-themes/Foxtrot/scalable/Makefile.am:
	* icon-themes/Gion/AUTHORS:
	* icon-themes/Gion/Makefile.am:
	* icon-themes/Gion/index.theme:
	* icon-themes/Makefile.am:
	* icon-themes/Neu/128x128/Makefile.am:
	* icon-themes/Neu/128x128/actions/Makefile.am:
	* icon-themes/Neu/128x128/apps/Makefile.am:
	* icon-themes/Neu/128x128/categories/Makefile.am:
	* icon-themes/Neu/128x128/devices/Makefile.am:
	* icon-themes/Neu/128x128/emblems/Makefile.am:
	* icon-themes/Neu/128x128/mimetypes/Makefile.am:
	* icon-themes/Neu/128x128/places/Makefile.am:
	* icon-themes/Neu/128x128/status/Makefile.am:
	* icon-themes/Neu/22x22/Makefile.am:
	* icon-themes/Neu/22x22/actions/Makefile.am:
	* icon-themes/Neu/22x22/apps/Makefile.am:
	* icon-themes/Neu/22x22/categories/Makefile.am:
	* icon-themes/Neu/22x22/devices/Makefile.am:
	* icon-themes/Neu/22x22/emblems/Makefile.am: