@@ -1,25 +1,12 @@
 size = 16x16
-context = mimetypes
+context = devices
 
 iconsdir = $(datadir)/icons/Gion/$(size)/$(context)
 
 icons_DATA = \
-	application-certificate.png \
-	audio-x-generic.png \
-	image-x-generic.png \
-	package-x-generic.png \
-	text-html.png \
-	text-x-authors.png \
-	text-x-changelog.png \
-	text-x-copying.png \
-	text-x-generic-template.png \
-	text-x-generic.png \
-	text-x-install.png \
-	text-x-readme.png \
-	text-x-script.png \
-	text-x-source.png \
-	x-office-document.png \
-	x-office-spreadsheet.png
+	computer.png \
+	drive-harddisk.png \
+	drive-removable-media.png
 
 EXTRA_DIST =				\
 	$(icons_DATA)
